1999-08-09  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/stage2.c (run_menu): Terminate the string PASSWORD
	before checking if ENTERED is identical to PASSWORD. Reported
	by Mark Lundeberg <aa026@pgfn.bc.ca>.
	
1999-08-08  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/stage2.c (set_line_normal): New function.
	(set_line_highlight): Likewise.
	(run_menu): Do not call the function set_line directly any
	longer, call set_line_normal and set_line_highlight instead.

	From Pavel Roskin:
	* stage2/stage2.c (run_menu) [GRUB_UTIL]: Quit when pushing the
	key `q'.
	
1999-08-05  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* acinclude.m4 (grub_ASM_PREFIX_REQUIREMENT): New function.
	* configure.in: Call grub_ASM_PREFIX_REQUIREMENT, and define
	ADDR32 and DATA32 based on the result.
	* stage2/asm.S: Replace addr32 and data32 prefixes with	ADDR32
	and DATA32 respectively.
	
1999-08-05  Pavel Roskin  <pavel_roskin@geocities.com>

	* stage2/boot.c (load_image): Use RAW_ADDR macro when loading
	an a.out kernel.
	
1999-08-04  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* stage2/asm.S: Make each of the addr32 and data32 prefixes
	appear in the same line as it modifies, as the gas manual in
	binutils-2.9.5.0.4 says "it must be in the same line".
	
1999-08-04  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* boot.c (load_image): Fix a strcmp test. Reported by Pavel
	Roskin <pavel_roskin@geocities.com>.
	
1999-08-03  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	From "Dan J. Walters" <djw@cs.utexas.edu>:
	* stage2/i386-elf.h (EI_BRAND): New macro.
	* stage2/boot.c (load_image): If the kernel is ELF, check if it
	is a FreeBSD kernel as well as a Multiboot kernel, and if it is 
	a FreeBSD kernel, then mask ENTRY_ADDR since FreeBSD requires
	that. Likewise, mask MEMADDR.
	(bsd_boot): Set the bi_symtab and the bi_esymtab members of BI
	only if MBI.FLAGS has the flag MB_INFO_AOUT_SYMS. Otherwise,
	clear them.
	